fix for bug 441