@@ -9,7 +9,6 @@
 		<java fork="true" classname="org.eclipse.osgi.framework.launcher.Launcher">	
 			<classpath path="../org.osgi.impl.framework.eclipse.jar"/>
 			<jvmarg value="-Dosgi.install.area=file:"/>
-			<jvmarg value="-Xverify:none"/>
 			<arg value="-console:2201"/>
 			<arg value="init"/>
 			<arg value="launch"/>
@@ -58,7 +57,6 @@
 			<jvmarg value="-Dorg.osgi.test.batch.script=${script}"/>
 			<jvmarg value="-Dorg.osgi.test.batch.out=${out}"/>
 			<jvmarg value="-Dosgi.install.area=file:"/>
-			<jvmarg value="-Xverify:none"/>
 			<arg value="-console:2201"/>
 			<arg value="init"/>
 			<arg value="launch"/>
